--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=test_dst
+DB_NAME=direct_sales_tree
 
 # Server Configuration
 PORT=3000
