--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:frontend": "cd frontend && npm run build",
     "start": "node dist/server.js",
     "import-csv": "ts-node src/scripts/importCSV.ts",
-    "setup-db": "ts-node src/scripts/setupDatabase.ts"
+    "setup-db": "ts-node src/scripts/setupDatabase.ts",
+    "check-members": "ts-node src/scripts/checkMembers.ts"
   },
   "dependencies": {
     "axios": "^1.12.2",
