--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "cytoscape": "^3.26.0",
     "jspdf": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/cytoscape": "^3.19.11",
